<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ActivityCriminalRecord">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:padding="3dp"
        android:text="@string/bat_database"/>

    <EditText
        android:id="@+id/etName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@color/white"
        android:hint="@string/enter_name"
        android:layout_gravity="center"
        android:padding="5dp"
        android:inputType="text"
        android:maxLength="10"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/etAge"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_gravity="center"
        android:background="@color/white"
        android:hint="@string/enter_age"
        android:padding="5dp"
        android:inputType="numberDecimal"
        android:maxLength="2"
        android:textColor="@color/black" />
    <EditText
        android:id="@+id/etCrime"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_gravity="center"
        android:background="@color/white"
        android:hint="@string/enter_crime"
        android:padding="5dp"
        android:inputType="text"
        android:textColor="@color/black" />
    <EditText
        android:id="@+id/etPunishment"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_gravity="center"
        android:background="@color/white"
        android:hint="@string/enter_DOI"
        android:padding="5dp"
        android:inputType="numberDecimal"
        android:maxLength="2"
        android:textColor="@color/black" />

    <CheckBox
        android:id="@+id/etIsSolved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:checked="true"
        android:hint="@string/is_Solved"
        android:textColorHint="@color/white"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:layout_gravity="center">

        <Button
            android:id="@+id/btnAddCrime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"/>

        <Button
            android:id="@+id/btnViewCrime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view"/>
        <Button
            android:id="@+id/btnUpdateCrime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"/>
        <Button
            android:id="@+id/btnClearField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCriminalRecord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:layout_margin="10dp"/>

</LinearLayout>