<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imgBat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/batred"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imgComp"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginTop="150dp"
        android:src="@drawable/computer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imgBat" />

    <EditText
        android:id="@+id/etId"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@color/white"
        android:hint="@string/enter_id"
        android:padding="5dp"
        android:inputType="text"
        android:maxLength="5"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgBat" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="22dp"
        android:background="@color/white"
        android:hint="@string/enter_password"
        android:padding="5dp"
        android:inputType="textPassword"
        android:maxLength="5"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etId" />

    <Button
        android:id="@+id/btnEnter"
        android:layout_width="69dp"
        android:layout_height="74dp"
        android:layout_marginTop="132dp"
        android:background="@drawable/round_button"
        android:text="@string/greater_than"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

<!--    <TextView-->
<!--        android:id="@+id/tvSignup"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Register A New Profile?"-->
<!--        android:textColor="@color/white"-->
<!--        android:textSize="15sp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/btnEnter" />-->

</androidx.constraintlayout.widget.ConstraintLayout>