<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawerLayout"
    android:background="@color/black"
    android:orientation="vertical"
    android:padding="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/frame"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imgBatRed"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:src="@drawable/batred"
                android:layout_marginTop="40dp"
                android:layout_marginStart="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/appName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imgBatRed" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/wayne_industries"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="italic"
                android:layout_marginStart="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/appName" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cvWelcome"
                android:layout_width="185dp"
                android:layout_height="184dp"
                android:layout_marginTop="50dp"
                app:cardBackgroundColor="@color/darkBlue"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                app:cardMaxElevation="12dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imgBatRed"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tvWelcome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/welcome_back_bat"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvCaseCount"
            android:layout_width="175dp"
            android:layout_height="174dp"
            app:cardBackgroundColor="@color/darkBlue"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:cardMaxElevation="12dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toStartOf="@id/cvDateTime"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/frame">

            <TextView
                android:id="@+id/tvCaseCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="10dp"
                android:text="Case Solved:\n"
                android:textColor="@color/white"
                android:textSize="26sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvCriminals"
            android:layout_width="175dp"
            android:layout_height="174dp"
            android:layout_marginEnd="4dp"
            app:cardBackgroundColor="@color/darkBlue"
            app:cardCornerRadius="20dp"
            app:cardMaxElevation="12dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cvLastLogin"
            app:layout_constraintTop_toBottomOf="@id/cvDateTime">

            <TextView
                android:id="@+id/tvCriminals"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/bat_database"
                android:textColor="@color/white"
                android:textSize="26sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvLastLogin"
            android:layout_width="175dp"
            android:layout_height="174dp"
            app:cardBackgroundColor="@color/darkBlue"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:cardMaxElevation="12dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toStartOf="@+id/cvCriminals"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cvCaseCount">

            <TextView
                android:id="@+id/tvLastLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textSize="21sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvDateTime"
            android:layout_width="175dp"
            android:layout_height="174dp"
            app:cardBackgroundColor="@color/darkBlue"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:cardMaxElevation="12dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cvCaseCount"
            app:layout_constraintTop_toBottomOf="@id/frame">

            <TextView
                android:id="@+id/tvDateTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="10dp"
                android:text="Allies"
                android:textColor="@color/white"
                android:textSize="26sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="69dp"
            android:layout_height="74dp"
            android:background="@drawable/round_button"
            android:text="@string/x"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginBottom="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/activity_drawer_header"
        app:menu="@menu/drawer_menu"/>

</androidx.drawerlayout.widget.DrawerLayout>
